discussion/kv_engine/171648/171648_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50988: Introduce LimitedConcurrencyTask

Some tasks need to be able to limit how many instances run
concurrently, like CompactTask.

Add SemaphoreBoundedTask to allow task concurrency to be limited by a
cb::AwaitableSemaphore.

If multiple tasks share a semaphore, the number of these tasks running
at a given time is limited by the capacity of the semaphore.

If no semaphore tokens are available, the task will snooze().

cb::AwaitableSemaphore maintains a queue of waiters, and will notify
"blocked" tasks when tokens become available. The task will then try to
acquire a token and run immediately.

This is not currently transparent to the task - it is required that the
task call:

  bool runInner() override {
     auto guard = acquireOrWait();
     if (!guard) {
         // could not acquire a token, queued for notification.
         // already snooze()-ed forever, just return true to
         // reschedule.
         return true;
     }
     // Do concurrency-limited work
  }

However, a future refactor could avoid this by, for example,
restructuring as a mixin

 LimitedConcurrency<SomeTask> task(semaphore, ...);

allowing any `SomeTask::run()` to be wrapped.

This would allow any task to be bounded by a semaphore if necessary,
without modification.

Change-Id: Ibf069081dcff31ebd99237273d6ac1962f12ef42

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-03-03 14:27:29.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-03 14:43:50.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/11/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/11/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10: error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
#include <platform/awaitable_semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/task_concurrency_test.cc:53:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~ConcurrencyTestTask() = default;
    ~~~~~~~~^
                                   override 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/task_concurrency_test.h:17:10: error: "platform/semaphore_guard.h" file not found [clang-diagnostic-error]
#include <platform/semaphore_guard.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/11/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/13/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\limited_concurrency_task.h(15): fatal error C1083: Cannot open include file: "platform/awaitable_semaphore.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/13/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/11/ : FAILURE

Compile error at [2022-03-03T14:39:44.688Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/11/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/11/ : FAILURE

Compile error at [2022-03-03T14:42:42.518Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/11/ : FAILURE

Compile error at [2022-03-03T14:42:12.448Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/11/ : FAILURE

Compile error at [2022-03-03T14:42:25.858Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/11/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/6/ : FAILURE

Compile error at [2022-03-03T14:35:17.457Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/6/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/12/ : FAILURE

Compile error at [2022-03-03T14:31:00.974Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14746/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
